--- a/jtc_index_txt.html
+++ b/jtc_index_txt.html
@@ -7,16 +7,49 @@
     Case Problem 1
     
     Jedds Tree Care Home Page
-    Author: 
-    Date:   
+    Author: Claudio Rios
+    Date: AUG 14, 2019
 
     Filename: jtc_index.html
    -->
+   <meta charset = 'UTF-8'>
+   <title>Jedds Tree Care</title>
+
 
 </head>
 
 <body>
-
+ <header>
+     <nav>
+         <ul>
+             <li><a href = "jtc_index.html">Home</a></li>
+            <li><a href = "jtc_services.html">Services</a></li>
+            
+         </ul>
+     </nav>
+ </header>
+<aside>
+<img src "jtc_comments.png" alt= "comments">
+<blockquote>
+<p>I hired Jedds to remove an old Sugar maple from a narrow yard. 
+They did the job with no damage to my garage and cleaned it all up 
+that same day. Great service.</p>
+--- Kevin S (Dewitt)
+</blockquote>
+<blockquote>
+    <p>Jedds Tree Care promptly came to examine a downed tree and provide 
+an estimate for its removal. They did the job fast and at the lowest bid. 
+I'll call them again without hesitation for future lawn and garden needs.
+--- Ann K (Stockbridge) </p>
+</blockquote>
+<blockquote>
+    <p>Their team took down five trees in one day and did an immaculate clean-up. 
+They took extra care not to disturb my lawn and garden. I highly recommend 
+their service.
+---  David P (Lansing) </p>
+</blockquote>
+</aside>
+<article> </article>
 </body>
 
 </html>
