added some comments

--- a/jtc_services_txt.html
+++ b/jtc_services_txt.html
@@ -5,17 +5,17 @@
         <title>Jedds Tree Care</title>
         <link href= "jtc_base.css" rel="stylesheet">
         <link href= "jtc_layout.css" rel="stylesheet"
-<!--
+<!--    
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 1
     
     Jacobs Tree Care Services
-    Author: 
-    Date:   
+    Author: claudio Rios
+    Date: Aug 15
 
     Filename: jtc_services.html
-	-->
+-->
 
 </head>
 
@@ -72,6 +72,7 @@
             ones. We can work with your trees, shrubbery, and other greenery to enhance the natural 
             beauty of your property and help you achieve your landscaping vision</p>           
 </body>
+<!--they do it all!-->
 <footer>
         Jedds Tree Care ⬥ 201 Edward Ave. ⬥ Lansing, Mi 48930 
 </footer>
