--- a/jtc_index_txt.html
+++ b/jtc_index_txt.html
@@ -19,7 +19,7 @@
 
 
 </head>
-
+<!--not sure what to comment-->
 <body>
  <header>
      <nav>
@@ -70,6 +70,7 @@ their service.
         Lansing, MI 48930 <br>
         email:<a href= "mailto:jeddstree@example.com">jeddstree@example.com</a>
         phone:<a href= "tel:+15175554811">+1 517.555.4811</a>
+        <!--tel: specifies that it is a phone # -->
 </address>   
         </article>
 </body>
