--- a/jtc_services_txt.html
+++ b/jtc_services_txt.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body> <!--header and head are not the same thing-->
         <header>
                 <nav>
                     <ul>
@@ -70,10 +70,11 @@
         <h2>Tree Planting and Transplanting</h2>
             <p>We are ready to help as you landscape your property by replanting old trees and planting new
             ones. We can work with your trees, shrubbery, and other greenery to enhance the natural 
-            beauty of your property and help you achieve your landscaping vision</p>           
+            beauty of your property and help you achieve your landscaping vision</p>   
+            <footer>
+                    Jedds Tree Care ⬥ 201 Edward Ave. ⬥ Lansing, Mi 48930 
+            </footer>                    
 </body>
 <!--they do it all!-->
-<footer>
-        Jedds Tree Care ⬥ 201 Edward Ave. ⬥ Lansing, Mi 48930 
-</footer>
+
 </html>
